# XRENGINE

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .vrmanifest  AGENTS.md  ActionManifest.json  Directory.Build.props  Directory.Build.targets  ExecTool.bat  README.md  README_DEPLOY.md  XRENGINE.sln  XRENGINE.slnx  bindings_knuckles.json  build_docfx.bat  build_engine_latest.txt  build_errors.txt  build_output.txt  build_output_copilot.txt  build_output_latest.txt  build_submodules.bat  build_unittests_latest.txt  imgui.ini  init_submodules.bat  oct_test.py  reset_sandbox.bat  run_docfx.bat  run_editor.bat  run_network_test.bat  simulate_octa.py  test_output.txt
.codex/: config.toml  hooks.json
.github/: FUNDING.yml  dependabot.yml
Assets/: UnitTestingWorldSettings.json  UnitTestingWorldSettings.jsonc  state.asset
InspectPxgTemp/: InspectPxgTemp.csproj  Program.cs
Samples/: VR_MonkeyBall_Sample.sln  XRE_SampleGames.sln
Tools/: Build-DocFx.bat  Build-Submodules.bat  Build-VulkanMemoryAllocatorBridge.ps1  Capture-EditorWindow.bat  Capture-EditorWindow.ps1  Diagnose-ZeroReadbackHz.ps1  Generate-AotFactoryRegistrations.ps1  Generate-UnitTestingWorldSettings.ps1  Get-FreePbrTextures.ps1  Get-PixelFurnaceTextures.ps1  HumanoidFullPoseExporter.cs  Initialize-Submodules.bat  Invoke-CodeReviewGraph.ps1  Invoke-GameProject.bat  Invoke-Mcp.ps1  MagicPhysX.xml  Manage-McpEditorSession.ps1  Measure-GameLoopRenderPipeline.ps1  Measure-MeshSubmissionBaselines.ps1  Measure-VulkanFrameLoop.ps1  Publish-AotFinalGame.ps1  Repro-ZeroReadbackCrash.ps1  Run-DeployGpuValidation.ps1  Setup-CodeReviewGraph.ps1  Start-NetworkTest.bat  Test-CookCommonAssets.ps1  Validate-VulkanDescriptorLifetimePressure.ps1  Validate-VulkanPhase524b.ps1  capture_xrengine.bat  capture_xrengine.ps1  game_project.bat  reset_global.bat  run_docfx.bat  run_editor.bat  run_network_test.bat  stream_validation_results.txt  stream_validation_results_sodapoppin.txt  stream_validation_results_sodapoppin_final.txt
VR_MonkeyBall_Sample/: .gitignore  VR_MonkeyBall_Sample.csproj
XRENGINE/: EditorPreferences.cs  EditorPreferencesOverrides.cs  FastGltfImporter.cs  FontGlyphSet.cs  GameMode.cs  GameModes.cs  GameStartupSettings.cs  GameState.cs  GameWindowStartupSettings.cs  GlobalUsings.Physics.cs  LocomotionGameMode.cs  ModelImporter.cs  XREngine.csproj
XRENGINE/Rendering/GI/: CMakeLists.txt  LightVolumeRegistry.cs  RadianceCascadeRegistry.cs  RestirGI.Native.cpp  RestirGI.cs
XREngine.Animation/: AnimationCurve.cs  AuthoredCadence.cs  BaseAnimation.cs  TransformKeyCollection.cs  VRIKCalibrationSettings.cs  XREngine.Animation.csproj
XREngine.Audio/: AudioBuffer.cs  AudioDiagnostics.cs  AudioInputDeviceFloat.cs  AudioManager.cs  AudioSettings.cs  AudioSource.cs  IAudioStreamingComponent.cs  IRuntimeAudioListenerWorld.cs  ListenerContext.cs  NAudioMixer.cs  NAudioTransport.cs  OpenALTransport.cs  PassthroughProcessor.cs  (+2 more)
(+6236 files in other folders)
